language/move-lang/tests/move_check/typing/bind_wrong_type.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/bind_wrong_type.move:6:13
  │
6 │         let S { g } = R {f :0};
  │             ^^^^^^^   -------- Expected: '0x8675309::M::R'
  │             │          
  │             Invalid deconstruction binding
  │             Given: '0x8675309::M::S'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/bind_wrong_type.move:7:14
  │
7 │         let (S { g }, R { f }) = (R{ f: 0 }, R{ f: 1 });
  │              ^^^^^^^              --------- Expected: '0x8675309::M::R'
  │              │                     
  │              Invalid deconstruction binding
  │              Given: '0x8675309::M::S'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/bind_wrong_type.move:11:13
   │
11 │         let x = ();
   │             ^   -- Expected a single type, but found expression list type: '()'
   │             │    
   │             Invalid type for local

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:12:13
   │
12 │         let () = 0;
   │             ^^   - Given: integer
   │             │     
   │             Invalid value for binding
   │             Expected: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:13:13
   │
13 │         let (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │             ^^^^^^^^^^^^   ---------------------------- Given expression list of length 4: '({integer}, bool, 0x8675309::M::R, 0x8675309::M::R)'
   │             │               
   │             Invalid value for binding
   │             Expected expression list of length 3: '(_, _, _)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:14:13
   │
14 │         let (x, b, R{f}) = (0, false);
   │             ^^^^^^^^^^^^   ---------- Given expression list of length 2: '({integer}, bool)'
   │             │               
   │             Invalid value for binding
   │             Expected expression list of length 3: '(_, _, _)'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/bind_wrong_type.move:18:13
   │
18 │         let x: () = 0;
   │             ^  -- Expected a single type, but found expression list type: '()'
   │             │   
   │             Invalid type for local

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:18:16
   │
18 │         let x: () = 0;
   │                ^^   - Given: integer
   │                │     
   │                Invalid type annotation
   │                Expected: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:19:13
   │
19 │         let (): u64 = ();
   │             ^^  --- Given: 'u64'
   │             │    
   │             Invalid value for binding
   │             Expected: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:19:17
   │
19 │         let (): u64 = ();
   │                 ^^^   -- Given: '()'
   │                 │      
   │                 Invalid type annotation
   │                 Expected: 'u64'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:20:13
   │
20 │         let (x, b, R{f}): (u64, bool, R, R) = (0, false, R{f: 0});
   │             ^^^^^^^^^^^^  ----------------- Given expression list of length 4: '(u64, bool, 0x8675309::M::R, 0x8675309::M::R)'
   │             │              
   │             Invalid value for binding
   │             Expected expression list of length 3: '(_, _, _)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:20:27
   │
20 │         let (x, b, R{f}): (u64, bool, R, R) = (0, false, R{f: 0});
   │                           ^^^^^^^^^^^^^^^^^   ------------------- Given expression list of length 3: '({integer}, bool, 0x8675309::M::R)'
   │                           │                    
   │                           Invalid type annotation
   │                           Expected expression list of length 4: '(u64, bool, 0x8675309::M::R, 0x8675309::M::R)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:21:13
   │
21 │         let (x, b, R{f}): (u64, bool) = (0, false, R{f: 0});
   │             ^^^^^^^^^^^^  ----------- Given expression list of length 2: '(u64, bool)'
   │             │              
   │             Invalid value for binding
   │             Expected expression list of length 3: '(_, _, _)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/bind_wrong_type.move:21:27
   │
21 │         let (x, b, R{f}): (u64, bool) = (0, false, R{f: 0});
   │                           ^^^^^^^^^^^   ------------------- Given expression list of length 3: '({integer}, bool, 0x8675309::M::R)'
   │                           │              
   │                           Invalid type annotation
   │                           Expected expression list of length 2: '(u64, bool)'

